# shlp-from-scratch

./: .gitignore  CMakeLists.txt  README.md
array-lib/: CMakeLists.txt  array.h  array1d.cpp  array2d.cpp  tools.h
nn-lib/: CMakeLists.txt  base.h  modules.cpp
src/: main.cpp
tests/: test_array.h  testing_tools.h  tests.h
